--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "bulma-start",
-  "version": "0.0.3",
-  "description": "Start package for Bulma",
+  "name": "sakul6499.de",
+  "version": "0.0.1",
+  "description": "My website",
   "keywords": [
     "sass",
-    "bulma",
-    "css",
-    "start"
+    "css"
   ],
-  "author": "Jeremy Thomas <bbxdesign@gmail.com> (http://jgthms.com)",
+  "author": "Lukas Weber <me@sakul6499.de> (https://sakul6499.de)",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jgthms/bulma-start.git"
+    "url": "git+git@gitlab.com:sakul6499.de/sakul6499.de.git"
   },
   "license": "MIT",
   "devDependencies": {
@@ -21,6 +19,7 @@
     "babel-preset-es2015-ie": "^6.7.0",
     "bulma": "^0.7.2",
     "node-sass": "^4.11.0",
+    "npm-pack-zip": "^1.2.7",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.1"
   },
@@ -32,7 +31,8 @@
     "deploy": "npm run css-deploy && npm run js-build",
     "js-build": "babel _javascript --out-dir lib",
     "js-watch": "npm run js-build -- --watch",
-    "start": "npm-run-all --parallel css-watch js-watch icon-optimize"
+    "start": "npm-run-all --parallel css-watch js-watch",
+    "pack": "npm-pack-zip"
   },
   "dependencies": {
     "simple-icons": "^1.10.0",
