--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,40 @@ stages:
   - build
   - deploy
 
+before_script:
+  ##
+  ## Install ssh-agent if not already installed, it is required by Docker.
+  ## (change apt-get to yum if you use an RPM-based image)
+  ##
+  - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+
+  ##
+  ## Run ssh-agent (inside the build environment)
+  ##
+  - eval $(ssh-agent -s)
+
+  ##
+  ## Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
+  ## We're using tr to fix line endings which makes ed25519 keys work
+  ## without extra base64 encoding.
+  ## https://gitlab.com/gitlab-examples/ssh-private-key/issues/1#note_48526556
+  ##
+  - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+
+  ##
+  ## Create the SSH directory and give it the right permissions
+  ##
+  - mkdir -p ~/.ssh
+  - chmod 700 ~/.ssh
+
+  ##
+  ## Optionally, if you will be using any Git commands, set the user name and
+  ## and email.
+  ##
+  - git config --global user.email "webmaster@sakul6499.de"
+  - git config --global user.name "webmaster"
+
+
 build:
   stage: build
   script: npm install && npm run deploy
@@ -20,12 +54,21 @@ build:
     - merge_requests
     - chats
 
-deploy_staging:
+deploy_preview:
   stage: deploy
-  script:
-    - echo "Deploy to staging server"
+  script: rsync -avrPtzu -e "ssh -p 4753" . webmaster@raw.sakul6499.de:/srv/http/preview.sakul6499.de/
   environment:
-    name: sakul6499
+    name: preview
+    url: https://preview.sakul6499.de
+  except:
+  - master
+
+  deploy_production:
+  stage: deploy
+  script: rsync -avrPtzu -e "ssh -p 4753" . webmaster@raw.sakul6499.de:/srv/http/sakul6499.de/
+  environment:
+    name: production
     url: https://sakul6499.de
+  when: manual
   only:
   - master
