--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,8 @@ before_script:
   ##
   - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
 
+  - echo "---"
+
   ##
   ## Create the SSH directory and give it the right permissions
   ##
