--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,40 +5,22 @@ stages:
   - deploy
 
 before_script:
-  ##
-  ## Install ssh-agent if not already installed, it is required by Docker.
-  ## (change apt-get to yum if you use an RPM-based image)
-  ##
-  - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
-
-  ##
-  ## Run ssh-agent (inside the build environment)
-  ##
-  - eval $(ssh-agent -s)
-
-  ##
-  ## Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
-  ## We're using tr to fix line endings which makes ed25519 keys work
-  ## without extra base64 encoding.
-  ## https://gitlab.com/gitlab-examples/ssh-private-key/issues/1#note_48526556
-  ##
-  - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
-
-  - echo "---"
-
-  ##
-  ## Create the SSH directory and give it the right permissions
-  ##
+  # Create directories and give write permissions to it
   - mkdir -p ~/.ssh
   - chmod 700 ~/.ssh
-
-  ##
-  ## Optionally, if you will be using any Git commands, set the user name and
-  ## and email.
-  ##
+  # Store public and private key
+  - echo "$SSH_PUBLIC_KEY" | tr -d '\r' > ~/.ssh/id_rsa.pub
+  - echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
+  # Set read permission for private key
+  - chmod 600 ~/.ssh/id_rsa
+  # Invoke ssh-agent and add private key
+  - eval $(ssh-agent -s)
+  - ssh-add ~/.ssh/id_rsa
+  # Add deploy domain to known hosts
+  - ssh-keyscan -H 'raw.sakul6499.de' >> ~/.ssh/known_hosts
+  # [Probably optional:] Set git credentials
   - git config --global user.email "webmaster@sakul6499.de"
   - git config --global user.name "webmaster"
-
 
 build:
   stage: build
