Changed key location

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,15 +26,15 @@ build:
   - mkdir -p ~/.ssh
   - chmod 700 ~/.ssh
   # Store public and private key
-  - echo "$SSH_PUBLIC_KEY" | tr -d '\r' > ~/.ssh/id_rsa.pub
-  - echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
+  - echo "$SSH_PUBLIC_KEY" | tr -d '\r' > ~/.ssh/webmaster.pub
+  - echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/webmaster
   # Make sure both keys DON'T end with a new line
-  - sed  '/^$/d' ~/.ssh/id_rsa > ~/.ssh/id_rsa
-  - sed  '/^$/d' ~/.ssh/id_rsa.pub > ~/.ssh/id_rsa.pub
+  - sed  '/^$/d' ~/.ssh/webmaster > ~/.ssh/webmaster
+  - sed  '/^$/d' ~/.ssh/webmaster.pub > ~/.ssh/webmaster.pub
   # Set read permission for private key
-  - chmod 600 ~/.ssh/id_rsa
+  - chmod 600 ~/.ssh/webmaster
   # Invoke ssh-agent and add private key
-  - eval $(ssh-agent -s) && ssh-add ~/.ssh/id_rsa
+  - eval $(ssh-agent -s) && ssh-add ~/.ssh/webmaster
   # Add deploy domain to known hosts
   - ssh-keyscan -H 'raw.sakul6499.de' >> ~/.ssh/known_hosts
   # [Probably optional:] Set git credentials
