--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,8 +31,9 @@ build:
   # Make sure both keys DON'T end with a new line
   - sed  '/^$/d' ~/.ssh/webmaster > ~/.ssh/webmaster
   - sed  '/^$/d' ~/.ssh/webmaster.pub > ~/.ssh/webmaster.pub
-  # Set read permission for private key
+  # Set permission for keys
   - chmod 600 ~/.ssh/webmaster
+  - chmod 644 ~/.ssh/webmaster.pub
   # Print keys
   - echo "$SSH_PUBLIC_KEY"
   - echo "$SSH_PRIVATE_KEY"
