--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
   - deploy
 
 before_script:
- - apt-get install rsync
+ - apt-get update && apt-get install rsync
 
 build:
   stage: build
