Added StrictHostKeyChecking=No option to ssh

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ deploy_preview:
   <<: *deploy_definition
   script: 
   # Clean directory
-   - ssh webmaster@raw.sakul6499.de -p 4753 'rm -rf /srv/http/preview.sakul6499.de/*'
+   - ssh -o StrictHostKeyChecking=No webmaster@raw.sakul6499.de -p 4753 'rm -rf /srv/http/preview.sakul6499.de/*'
   # Upload current version
    - rsync -avrPtzu -e "ssh -p 4753" . webmaster@raw.sakul6499.de:/srv/http/preview.sakul6499.de/
   environment:
@@ -61,7 +61,7 @@ deploy_production:
   <<: *deploy_definition
   script: 
   # Clean directory
-   - ssh webmaster@raw.sakul6499.de -p 4753 'rm -rf /srv/http/sakul6499.de/*'
+   - ssh -o StrictHostKeyChecking=No webmaster@raw.sakul6499.de -p 4753 'rm -rf /srv/http/sakul6499.de/*'
   # Upload current version
    - rsync -avrPtzu -e "ssh -p 4753" . webmaster@raw.sakul6499.de:/srv/http/sakul6499.de/
   environment:
