--- a/package.json
+++ b/package.json
@@ -1,41 +1,39 @@
 {
-  "name": "sakul6499.de",
-  "version": "0.0.1",
-  "description": "My website",
-  "keywords": [
-    "sass",
-    "css"
-  ],
-  "author": "Lukas Weber <me@sakul6499.de> (https://sakul6499.de)",
-  "repository": {
-    "type": "git",
-    "url": "git+git@gitlab.com:sakul6499.de/sakul6499.de.git"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "autoprefixer": "^9.4.7",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015-ie": "^6.7.0",
-    "bulma": "^0.7.2",
-    "node-sass": "^4.11.0",
-    "npm-pack-zip": "^1.2.7",
-    "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.1.3"
-  },
-  "scripts": {
-    "css-deploy": "npm run css-build && npm run css-postcss",
-    "css-build": "node-sass _sass/main.scss css/main.css",
-    "css-postcss": "postcss --use autoprefixer --output css/main.css css/main.css",
-    "css-watch": "npm run css-build -- --watch",
-    "deploy": "npm run css-deploy && npm run js-build",
-    "js-build": "babel _javascript --out-dir lib",
-    "js-watch": "npm run js-build -- --watch",
-    "start": "npm-run-all --parallel css-watch js-watch",
-    "pack": "npm-pack-zip"
-  },
-  "dependencies": {
-    "simple-icons": "^1.10.0",
-    "svgo": "^1.2.2"
-  }
+    "name": "sakul6499.de",
+    "version": "0.0.1",
+    "description": "My website",
+    "keywords": [
+        "sass",
+        "css"
+    ],
+    "author": "Lukas Weber <me@sakul6499.de> (https://sakul6499.de)",
+    "repository": {
+        "type": "git",
+        "url": "git+git@gitlab.com:sakul6499.de/sakul6499.de.git"
+    },
+    "license": "MIT",
+    "devDependencies": {
+        "autoprefixer": "^9.4.7",
+        "babel-cli": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-es2015-ie": "^6.7.0",
+        "bulma": "^0.7.2",
+        "node-sass": "^4.11.0",
+        "npm-run-all": "^4.1.5",
+        "postcss-cli": "^6.1.3"
+    },
+    "scripts": {
+        "css-deploy": "npm run css-build && npm run css-postcss",
+        "css-build": "node-sass _sass/main.scss css/main.css",
+        "css-postcss": "postcss --use autoprefixer --output css/main.css css/main.css",
+        "css-watch": "npm run css-build -- --watch",
+        "deploy": "npm run css-deploy && npm run js-build",
+        "js-build": "babel _javascript --out-dir lib",
+        "js-watch": "npm run js-build -- --watch",
+        "start": "npm-run-all --parallel css-watch js-watch"
+    },
+    "dependencies": {
+        "simple-icons": "^1.10.0",
+        "svgo": "^1.2.2"
+    }
 }
