New project layout (without need for NodeJS)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,11 +2,10 @@ image: node:latest
 
 stages:
   - build
-  - deploy
 
 build:
   stage: build
-  script: npm install && npm run deploy
+  script: ./build.sh
   only:
     - branches
     - tags
