--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,5 @@
-# Generated CSS files
-_sass/*.css*
-css/
+# Output
+out/
+
+# SASS Cache
 .sass-cache/
-
-# Genearted JS files
-lib/
-
-# NodeJS
-node_modules/
-package-lock.json
-
-# IDEA files
-.idea/
-*.iml
-
-# VSCode files
-.vscode/
