Additional dictionary words that should be excluded from correction

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "Bulma",
+        "CTFs",
         "Keybase",
+        "Mockito",
         "Telemedia",
         "Xing"
     ]
