--- a/src/rust/dots/Cargo.toml
+++ b/src/rust/dots/Cargo.toml
@@ -39,7 +39,8 @@ features = [
     "HtmlElement",
     "HtmlBodyElement",
     "HtmlCanvasElement",
-    "CanvasRenderingContext2d"
+    "CanvasRenderingContext2d",
+    "Performance"
 ]
 
 [dev-dependencies]
