Changed CI deploy paths

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,9 +45,9 @@ deploy_staging:
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
     - ssh-add <(echo "$STAGING_PRIVATE_KEY")
   script:
-    - ssh -p22 deploy@raw.sakul6499.de "mkdir -p /srv/website_staging_tmp"
-    - rsync -rav -e ssh --exclude='.git/' --exclude='.gitlab-ci.yml' --delete-excluded ./ deploy@raw.sakul6499.de:/srv/website_staging_tmp
-    - ssh -p22 deploy@raw.sakul6499.de "mv /srv/website_staging /srv/website_staging_old && mv /srv/website_staging_tmp /srv/website_staging"
-    - ssh -p22 deploy@raw.sakul6499.de "rm -rf /srv/website_staging_old"
+    - ssh -p22 deploy@raw.sakul6499.de "mkdir -p /srv/website/staging/tmp"
+    - rsync -rav -e ssh --exclude='.git/' --exclude='.gitlab-ci.yml' --delete-excluded ./ deploy@raw.sakul6499.de:/srv/website/staging/tmp
+    - ssh -p22 deploy@raw.sakul6499.de "mv /srv/website/staging/current /srv/website/staging/old && mv /srv/website/staging/tmp /srv/website/staging/current
+    - ssh -p22 deploy@raw.sakul6499.de "rm -rf /srv/website/staging/old"
   only:
     - staging
