--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,5 +54,8 @@ deploy_staging:
     - rsync -rav -e ssh --exclude='.git/' --exclude='.gitlab-ci.yml' --delete-excluded ./out deploy@raw.sakul6499.de:/srv/website/staging/tmp
     - ssh -p22 deploy@raw.sakul6499.de "if [ -d '/srv/website/staging/current ]; then mv /srv/website/staging/current /srv/website/staging/old; fi && mv /srv/website/staging/tmp /srv/website/staging/current"
     - ssh -p22 deploy@raw.sakul6499.de "rm -rf /srv/website/staging/old"
+  environment:
+    name: staging
+    url: https://staging.sakul6499.de
   only:
     - staging
