--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,11 +3,27 @@
         {
             "label": "Build",
             "type": "shell",
-            "command": "./build.sh",
-            "problemMatcher": [],
+            "command": "cargo +nightly build",
+            "problemMatcher": ["$rustc"],
+            "presentation": {
+                "showReuseMessage": false,
+                "panel": "new",
+                "focus": true
+            }
+        },
+        {
+            "label": "Run",
+            "type": "shell",
+            "command": "cargo +nightly run -- ./out",
+            "problemMatcher": ["$rustc"],
             "group": {
                 "kind": "build",
                 "isDefault": true
+            },
+            "presentation": {
+                "showReuseMessage": false,
+                "panel": "new",
+                "focus": true
             }
         }
     ]
