--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 authors = ["Lukas Weber | #Sakul6499 <me@sakul6499.de>"]
 edition = "2018"
 
+[profile.dev]
+panic = "unwind"
+
+[profile.release]
+panic = "unwind"
+
 [dependencies]
 rocket = "0.4.2"
 rocket_contrib = "0.4.2"
