--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ docker_image:
     DOCKER_DRIVER: overlay2
     IMAGE_NAME: $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME/$CI_COMMIT_REF_NAME
   script:
-    - DOCKER_BUILDKIT=1 docker image build -f Dockerfile -t $IMAGE_NAME -t $IMAGE_NAME:$CI_COMMIT_REF_SLUG -t $IMAGE_NAME:latest --no-cache .
+    - DOCKER_BUILDKIT=1 docker image build -f Dockerfile -t $IMAGE_NAME -t $IMAGE_NAME:$CI_COMMIT_REF_SLUG -t $IMAGE_NAME:latest .
   before_script:
     - docker info
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
