--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,10 +35,12 @@ build:
   image: $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME/$CI_COMMIT_REF_NAME
   script:
     - /usr/bin/cargo +nightly build --release
+    - mkdir artifacts
+    - mv target/release/sakul6499_de_server artifact/server
+    - mv out/ artifacts/
   artifacts:
     paths:
-      - out/
-      - target/
+      - artifacts/
 
 deploy_staging:
   stage: deploy
@@ -52,7 +54,7 @@ deploy_staging:
     - ssh-add <(echo "$STAGING_PRIVATE_KEY")
   script:
     - ssh -p22 deploy@raw.sakul6499.de "mkdir -p /srv/website/staging/tmp"
-    - rsync -rav -e ssh --exclude='.git/*' --exclude='.gitlab-ci.yml' --delete-excluded ./target/release/sakul6499_de_server ./out deploy@raw.sakul6499.de:/srv/website/staging/tmp
+    - rsync -rav -e ssh --exclude='.git/*' --exclude='.gitlab-ci.yml' --delete-excluded artifacts/* deploy@raw.sakul6499.de:/srv/website/staging/tmp
     - ssh -p22 deploy@raw.sakul6499.de "if [ -d '/srv/website/staging/current' ]; then mv /srv/website/staging/current /srv/website/staging/old; fi && mv /srv/website/staging/tmp /srv/website/staging/current"
     - ssh -p22 deploy@raw.sakul6499.de "rm -rf /srv/website/staging/old"
     - ssh -p22 deploy@raw.sakul6499.de "sudo systemctl restart staging-server"
