CI: Updated triggers

--- a/.gitlab-ci-docker-base.yml
+++ b/.gitlab-ci-docker-base.yml
@@ -19,15 +19,5 @@ docker_base:
         max: 2
     only:
         changes:
-            - ".gitlab-ci.yml"
-            - ".gitlab-ci-docker.yml"
-            - ".gitlab-ci-docker-lnx.yml"
-            - ".gitlab-ci-docker-win.yml"
-            - ".gitlab-ci-rust-validation-win.yml"
-            - ".gitlab-ci-rust-validation.yml"
-            - ".gitlab-ci-rust-build.yml"
-            - ".gitlab-ci-rust-build-lnx.yml"
-            - ".gitlab-ci-rust-build-win.yml"
-            - ".gitlab-ci-docker-base.yml"
-            - ".gitlab-ci-rust-validation-lnx.yml"
+            - ".gitlab-ci*"
             - "docker/*"
