CI: Added staging deploy

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,3 +30,21 @@ build_docker:
     - docker push $IMAGE_NAME:latest
   needs:
     - build_src
+
+deploy_staging:
+  stage: deploy
+  image: $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME/$CI_COMMIT_REF_NAME
+  dependencies:
+    - build
+  before_script:
+    - mkdir -p ~/.ssh
+    - eval $(ssh-agent -s)
+    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+    - ssh-add <(echo "$STAGING_PRIVATE_KEY")
+  script:
+    - ssh -p22 deploy@raw.sakul6499.de "docker pull $IMAGE_NAME:latest && docker run $IMAGE_NAME:latest"
+  environment:
+    name: staging
+    url: https://staging.sakul6499.de
+  only:
+    - staging
