--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,10 +33,11 @@ build_docker:
 
 deploy_staging:
   stage: deploy
-  image: $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME/$CI_COMMIT_REF_NAME
+  image: alpine:latest
   dependencies:
     - build
   before_script:
+    - apk update && apk install openssh
     - mkdir -p ~/.ssh
     - eval $(ssh-agent -s)
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
