--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,35 +1,15 @@
 stages:
-  - build_src
-  - build_docker
+  - build
   - deploy
 
-build_src:
-  stage: build_src
+build:
+  stage: build
   image: registry.gitlab.com/docker-arch/rust/wasm-stable:latest
   script:
     - ./build.sh
   artifacts:
     paths:
         - out/
-
-build_docker:
-  stage: build_docker
-  image: docker:stable
-  services:
-    - docker:dind
-  variables:
-    DOCKER_HOST: tcp://docker:2375
-    DOCKER_DRIVE: overlay2
-    IMAGE_NAME: $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME 
-  before_script:
-    - docker info 
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-  script:
-    - docker build -f Dockerfile -t $IMAGE_NAME -t $IMAGE_NAME:latest .
-    - docker push $IMAGE_NAME
-    - docker push $IMAGE_NAME:latest
-  needs:
-    - build_src
 
 deploy_staging:
   stage: deploy
@@ -41,9 +21,15 @@ deploy_staging:
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
     - ssh-add <(echo "$STAGING_PRIVATE_KEY")
   script:
-    - ssh -p22 deploy@raw.sakul6499.de "docker pull registry.gitlab.com/sakul6499.de/sakul6499.de:latest && docker run registry.gitlab.com/sakul6499.de/sakul6499.de:latest"
+    - ssh -p22 deploy@raw.sakul6499.de "mkdir -p /srv/website/staging/tmp"
+    - rsync -rav -e ssh --exclude='.git/*' --exclude='.gitlab-ci.yml' --delete-excluded out/* nginx.conf mime.types deploy@raw.sakul6499.de:/srv/website/staging/tmp
+    - ssh -p22 deploy@raw.sakul6499.de "if [ -d '/srv/website/staging/current' ]; then mv /srv/website/staging/current /srv/website/staging/old; fi && mv /srv/website/staging/tmp /srv/website/staging/current"
+    - ssh -p22 deploy@raw.sakul6499.de "rm -rf /srv/website/staging/old"
+    - ssh -p22 deploy@raw.sakul6499.de "docker rm -f web_staging && docker run -d --name web_staging -p 80:80 -v /srv/website/staging/current:/usr/share/nginx/html:ro -v /srv/website/staging/current/nginx.conf:/etc/nginx/nginx.conf:ro nginx"
   environment:
     name: staging
     url: https://staging.sakul6499.de
   only:
     - staging
+  needs:
+    - build
