--- a/nginx.conf
+++ b/nginx.conf
@@ -31,7 +31,7 @@ http {
 
     server {
         listen 80;
-        server_name sakul6499.de;
+        server_name staging.sakul6499.de;
         
         location / {
             root /usr/share/nginx/html;
