--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,26 @@
 stages:
+  - docker
   - build
   - deploy
+
+docker:
+  stage: docker
+  image: docker
+  services:
+    - docker:dind
+  variables:
+    - DOCKER_HOST: tcp://docker:2375
+    - DOCKER_DRIVE: overlay2
+    - IMAGE_NAME: $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
+  before_script:
+    - docker info
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+  script:
+    - docker build -f Dockerfile -t $IMAGE_NAME -t $IMAGE_NAME:latest .
+    - docker push $IMAGE_NAME:latest
+  only:
+    changes:
+      - "Dockerfile"
 
 build:
   stage: build
@@ -13,9 +33,8 @@ build:
 
 deploy_staging:
   stage: deploy
-  image: ubuntu:latest
+  image: registry.gitlab.com/sakul6499.de/sakul6499.de
   before_script:
-    - apt update && apt install -y ssh
     - mkdir -p ~/.ssh
     - eval $(ssh-agent -s)
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
@@ -33,3 +52,4 @@ deploy_staging:
     - staging
   needs:
     - build
+    - docker
