--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,9 @@ docker:
   services:
     - docker:dind
   variables:
-    - DOCKER_HOST: tcp://docker:2375
-    - DOCKER_DRIVE: overlay2
-    - IMAGE_NAME: $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
+    DOCKER_HOST: tcp://docker:2375
+    DOCKER_DRIVE: overlay2
+    IMAGE_NAME: $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
   before_script:
     - docker info
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
