--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ deploy_staging:
     - ssh-add <(echo "$STAGING_PRIVATE_KEY")
   script:
     - ssh -p22 deploy@raw.sakul6499.de "mkdir -p /srv/website/staging/tmp"
-    - rsync -rav -e ssh --exclude='.git/*' --exclude='.gitlab-ci.yml' --delete-excluded out/* nginx.conf mime.types deploy@raw.sakul6499.de:/srv/website/staging/tmp
+    - rsync -rav -e ssh --exclude='.git/*' --exclude='.gitlab-ci.yml' --delete-excluded out/* nginx.conf deploy@raw.sakul6499.de:/srv/website/staging/tmp
     - ssh -p22 deploy@raw.sakul6499.de "if [ -d '/srv/website/staging/current' ]; then mv /srv/website/staging/current /srv/website/staging/old; fi && mv /srv/website/staging/tmp /srv/website/staging/current"
     - ssh -p22 deploy@raw.sakul6499.de "rm -rf /srv/website/staging/old"
     - ssh -p22 deploy@raw.sakul6499.de "docker rm -f web_staging && docker run -d --name web_staging -p 80:80 -v /srv/website/staging/current:/usr/share/nginx/html:ro -v /srv/website/staging/current/nginx.conf:/etc/nginx/nginx.conf:ro nginx"
