--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,8 @@ http {
     log_format   main '$remote_addr - $remote_user [$time_local]  $status '
     '"$request" $body_bytes_sent "$http_referer" '
     '"$http_user_agent" "$http_x_forwarded_for"';
+    
+    charset utf-8;
 
     types {
         text/html                             html;
@@ -36,6 +38,7 @@ http {
         location / {
             root /usr/share/nginx/html;
             expires 7d;
+            try_files $uri $uri/
         }
     }
 }
