--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,10 +40,10 @@ deploy_staging:
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
     - ssh-add <(echo "$STAGING_PRIVATE_KEY")
   script:
-    - ssh -p22 deploy@raw.sakul6499.de "mkdir -p /srv/website/staging/tmp"
+    - ssh deploy@raw.sakul6499.de "mkdir -p /srv/website/staging/tmp"
     - rsync -rav -e ssh --exclude='.git/*' --exclude='.gitlab-ci.yml' --delete-excluded out/* nginx.conf deploy@raw.sakul6499.de:/srv/website/staging/tmp
-    - ssh -p22 deploy@raw.sakul6499.de "if [ -d '/srv/website/staging/current' ]; then mv /srv/website/staging/current /srv/website/staging/old; fi && mv /srv/website/staging/tmp /srv/website/staging/current"
-    - ssh -p22 deploy@raw.sakul6499.de "rm -rf /srv/website/staging/old"
+    - ssh deploy@raw.sakul6499.de "if [ -d '/srv/website/staging/current' ]; then mv /srv/website/staging/current /srv/website/staging/old; fi && mv /srv/website/staging/tmp /srv/website/staging/current"
+    - ssh deploy@raw.sakul6499.de "rm -rf /srv/website/staging/old"
     - ssh deploy@raw.sakul6499.de 'if [[ `docker ps -a --format '{{.Names}}' | grep web_staging` ]]; then docker stop web_staging && docker rm -vf web_staging; fi; docker run -d --name web_staging -p 80:80 -v /srv/website/staging/current:/usr/share/nginx/html:ro -v /srv/website/staging/current/nginx.conf:/etc/nginx/nginx.conf:ro nginx'
   environment:
     name: staging
