Nginx: Added missing ;

--- a/nginx.conf
+++ b/nginx.conf
@@ -38,7 +38,7 @@ http {
         location / {
             root /usr/share/nginx/html;
             expires 7d;
-            try_files $uri $uri/
+            try_files $uri $uri/;
         }
     }
 }
