--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
         image/png                             png;
         image/gif                             gif;
         image/x-icon                          ico;
-        image/svg                             svg;
+        image/svg+xml                         svg;
         text/plain                            txt;
         application/pdf                       pdf;
         application/zip                       zip;
