Docker: Including Nginx default mime file

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,28 +9,10 @@ http {
     log_format   main '$remote_addr - $remote_user [$time_local]  $status '
     '"$request" $body_bytes_sent "$http_referer" '
     '"$http_user_agent" "$http_x_forwarded_for"';
-    
+
     charset utf-8;
 
-    types {
-        text/html                             html;
-        text/css                              css;
-        application/x-javascript              js;
-        text/xml                              xml rss;
-        image/jpeg                            jpeg jpg;
-        image/png                             png;
-        image/gif                             gif;
-        image/x-icon                          ico;
-        image/svg+xml                         svg;
-        text/plain                            txt;
-        application/pdf                       pdf;
-        application/zip                       zip;
-        application/octet-stream              bin exe dll;
-        application/octet-stream              deb;
-        application/octet-stream              dmg;
-        application/octet-stream              iso img;
-        application/wasm                      wasm;
-    }
+    include /etc/nginx/mime.types;
 
     gzip on;
     gzip_vary   on;
