--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,13 @@
 worker_processes 4;
 
+error_log logs/error.log
+
 events {
     worker_connections 4096;
 }
 
 http {
-    index index.html;
-    log_format   main '$remote_addr - $remote_user [$time_local]  $status '
-    '"$request" $body_bytes_sent "$http_referer" '
-    '"$http_user_agent" "$http_x_forwarded_for"';
-
-    charset utf-8;
-
     include /etc/nginx/mime.types;
-
     gzip on;
     gzip_vary   on;
     gzip_disable "MSIE [1-6]\.";
@@ -25,14 +19,16 @@ http {
         gzip_proxied    any;
         gzip_types text/plain text/css text/xml application/javascript application/x-javascript application/xml application/xml+rss application/ecmascript application/json image/svg+xml;
 
+    charset utf-8;
+
     server {
         listen 80;
         server_name staging.sakul6499.de;
+        access_log logs/staging.log
         
         location / {
             root /usr/share/nginx/html;
-            expires 7d;
-            try_files $uri $uri/ $uri/index.html;
+            index index.html;
         }
     }
 }
