--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 worker_processes 4;
 
-error_log logs/error.log
+error_log logs/error.log;
 
 events {
     worker_connections 4096;
@@ -24,7 +24,7 @@ http {
     server {
         listen 80;
         server_name staging.sakul6499.de;
-        access_log logs/staging.log
+        access_log logs/staging.log;
         
         location / {
             root /usr/share/nginx/html;
