--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,11 +16,11 @@ docker:
     - docker info
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
   script:
-    - docker build -f Dockerfile -t $IMAGE_NAME -t $IMAGE_NAME:latest .
+    - docker build -f deploy.docker -t $IMAGE_NAME -t $IMAGE_NAME:latest .
     - docker push $IMAGE_NAME:latest
   only:
     changes:
-      - "Dockerfile"
+      - "deploy.docker"
 
 build:
   stage: build
