--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
   - build
   - deploy
 
-docker:
+docker_image:
   stage: docker
   image: docker
   services:
@@ -16,24 +16,25 @@ docker:
     - docker info
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
   script:
-    - docker build -f deploy.docker -t $IMAGE_NAME -t $IMAGE_NAME:latest .
+    - docker build -f Dockerfile -t $IMAGE_NAME -t $IMAGE_NAME:latest .
     - docker push $IMAGE_NAME:latest
   only:
     changes:
-      - "deploy.docker"
+      - "Dockerfile"
 
 build:
   stage: build
-  image: registry.gitlab.com/docker-arch/rust/wasm-sass/stable:latest
+  image: $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
   script:
-    - cargo run
+    - yarn install
+    - yarn build
   artifacts:
     paths:
-        - out/
+        - build/
 
 deploy_staging:
   stage: deploy
-  image: registry.gitlab.com/sakul6499.de/sakul6499.de
+  image: $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
   before_script:
     - mkdir -p ~/.ssh
     - eval $(ssh-agent -s)
@@ -41,7 +42,7 @@ deploy_staging:
     - ssh-add <(echo "$STAGING_PRIVATE_KEY")
   script:
     - ssh deploy@raw.sakul6499.de "mkdir -p /srv/staging/tmp"
-    - rsync -rav -e ssh --exclude='.git/*' --exclude='.gitlab-ci.yml' --delete-excluded out/* nginx.conf deploy@raw.sakul6499.de:/srv/staging/tmp
+    - rsync -rav -e ssh build/* nginx.conf deploy@raw.sakul6499.de:/srv/staging/tmp
     - ssh deploy@raw.sakul6499.de "if [ -d '/srv/staging/current' ]; then mv /srv/staging/current /srv/staging/old; fi && mv /srv/staging/tmp /srv/staging/current"
     - ssh deploy@raw.sakul6499.de "rm -rf /srv/staging/old"
     - ssh deploy@raw.sakul6499.de 'docker stop web && docker rm -vf web; docker run -d --name web -p 80:80 -v /srv/staging/current:/usr/share/nginx/html/staging:ro -v /srv/master/current:/usr/share/nginx/html/master:ro -v /srv/staging/current/nginx.conf:/etc/nginx/nginx.conf:ro nginx'
@@ -55,7 +56,7 @@ deploy_staging:
 
 deploy_master:
   stage: deploy
-  image: registry.gitlab.com/sakul6499.de/sakul6499.de
+  image: $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
   before_script:
     - mkdir -p ~/.ssh
     - eval $(ssh-agent -s)
@@ -63,7 +64,7 @@ deploy_master:
     - ssh-add <(echo "$STAGING_PRIVATE_KEY")
   script:
     - ssh deploy@raw.sakul6499.de "mkdir -p /srv/master/tmp"
-    - rsync -rav -e ssh --exclude='.git/*' --exclude='.gitlab-ci.yml' --delete-excluded out/* nginx.conf deploy@raw.sakul6499.de:/srv/master/tmp
+    - rsync -rav -e ssh build/* nginx.conf deploy@raw.sakul6499.de:/srv/master/tmp
     - ssh deploy@raw.sakul6499.de "if [ -d '/srv/master/current' ]; then mv /srv/master/current /srv/master/old; fi && mv /srv/master/tmp /srv/master/current"
     - ssh deploy@raw.sakul6499.de "rm -rf /srv/master/old"
     - ssh deploy@raw.sakul6499.de 'docker stop web && docker rm -vf web; docker run -d --name web -p 80:80 -v /srv/staging/current:/usr/share/nginx/html/staging:ro -v /srv/master/current:/usr/share/nginx/html/master:ro -v /srv/master/current/nginx.conf:/etc/nginx/nginx.conf:ro nginx'
