--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "ts_app",
+  "name": "sakul6499.de",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.8",
-    "@types/react": "16.9.3",
-    "@types/react-dom": "16.9.1",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.8",
+    "@types/react": "^16.9.4",
+    "@types/react-dom": "^16.9.1",
     "@types/react-router-dom": "^5.1.0",
     "@types/styled-components": "^4.1.19",
     "bulma": "^0.7.5",
-    "react": "^16.10.0",
-    "react-dom": "^16.10.0",
-    "react-router-dom": "^5.1.1",
-    "react-scripts": "3.1.2",
+    "font-awesome": "^4.7.0",
+    "markdown": "^0.5.0",
+    "node-sass": "^4.12.0",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
+    "react-icons": "^3.7.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.1.2",
     "styled-components": "^4.4.0",
     "tslint": "^5.20.0",
     "tslint-react": "^4.1.0",
-    "typescript": "3.6.3"
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
