--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,8 @@ build:
   stage: build
   image: $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
   script:
-    - npm ci
-    - npm r build
+    - npm install
+    - npm run build
   artifacts:
     paths:
         - build/
