--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/react-router-dom": "^5.1.0",
     "@types/styled-components": "^4.1.19",
     "bulma": "^0.7.5",
-    "font-awesome": "^4.7.0",
+    "bulma-tooltip": "^2.0.2",
     "markdown": "^0.5.0",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
