Switching back to yarn
Signed-off-by: @Sakul6499 | Lukas Weber <me@sakul6499.de>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,7 @@ build:
   stage: build
   image: $CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
   script:
-    - npm install
-    - npm run build
+    - yarn build
   artifacts:
     paths:
         - build/
